--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MyBlog</string>
+    <string name="blog_image">Blog Image</string>
+    <string name="post_title">Post Title</string>
+    <string name="post_description">Post Description</string>
 </resources>
